--- a/Areas/Admin/Views/AdminAuth/Login.cshtml
+++ b/Areas/Admin/Views/AdminAuth/Login.cshtml
@@ -38,7 +38,8 @@
             </div>
 
             <span id="RadioHeDaoTao_Error" class="small mb-1 text-danger col-12"></span>
-            <a href="#" class="btn login-button col-12" id="bt_login" name="bt_login">Đăng nhập</a>
+            @*<input class="btn login-button col-12" type="submit" value="Đăng nhập" style="width: 100%" id="bt_login" name="bt_login" />*@
+            <a class="btn login-button col-12" id="bt_login" name="bt_login">Đăng nhập</a>
             <span id="Login_Error" class="small mb-1 text-danger col-12"></span>
             <hr />
             <div class="register-link">
