--- a/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyen.cshtml
+++ b/Areas/Admin/Views/HocVienDangKys/DsHvDuTuyen.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin_Master.cshtml";
 }
+<link href="~/Content/font_bootstrap-icons.css" rel="stylesheet" />
 
 <style>
     th, td {
@@ -22,6 +23,7 @@
                 <div class="col-auto mb-1">
                     <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
+                        <i class=""></i>
                         <span>Quản lý danh mục dự tuyển</span>
                     </div>
                 </div>
@@ -49,8 +51,8 @@
                     })
                 </script>
                 <div>
-                    <a class="btn btn-light btn-sm" id="bt_collapse_show" style=" border-radius:3px; color:blue">Xem thêm</a>
-                    <a class="btn btn-light btn-sm" id="bt_collapse_hide" style="display: none; border-radius: 3px; color: blue">Thu gọn</a>
+                    <a class="btn btn-light btn-sm" id="bt_collapse_show" style=" border-radius:3px; color:blue"><i data-feather="chevron-down" style="vertical-align:middle!important"></i></a>
+                    <a class="btn btn-light btn-sm" id="bt_collapse_hide" style="display: none; border-radius: 3px; color: blue"><i data-feather="chevron-up" style="vertical-align:middle!important"></i></a>
                     <script>
                         $(document).ready(function () {
                             $('#bt_collapse_show').click(function () {
@@ -72,7 +74,7 @@
                     <div class="col-xl-3 col-12"><span>- Ngành khoa học máy tính: 1 học viên</span></div>
                     <div class="col-xl-3 col-12"><span>- Ngành Địa lý: 1 học viên</span></div>
                     @*<div class="col-xl-3 col-12"><span>- Ngành Khoa học cây trồng: 10 học viên</span></div>
-                    <div class="col-xl-3 col-12"><span>- Ngành Khoa học cây trồng: 10 học viên</span></div>*@
+                        <div class="col-xl-3 col-12"><span>- Ngành Khoa học cây trồng: 10 học viên</span></div>*@
                     <hr class="mt-2 mb2" />
                 </div>
                 @using (Html.BeginForm("DsHvDuTuyen", "HocVienDangKys", FormMethod.Get))
@@ -96,34 +98,16 @@
 
                         <div class="col-xxl-2 col-xl-12">
                             <div class="d-inline-flex flex-nowrap align-items-center">
-                                <button class="btn btn-outline-primary bd-rd text-nowrap" id="bt_search" style="margin-right:4px">Lọc</button>
-                                <a class="btn btn-outline-secondary bd-rd text-nowrap " id="bt_reset" href="@Url.Action("DsHvDuTuyen", "HocVienDangKys")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
-                                <a class="btn btn-outline-primary bd-rd  text-nowrap" id="bt_export_excel2" href="@Url.Action("ExportHvDKDuTuyen", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>
+                                <button class="btn btn-outline-primary bd-rd text-nowrap" id="bt_search" style="margin-right:4px"><i data-feather="filter" style="vertical-align:middle!important"></i></button>
+                                <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_reset" href="@Url.Action("DsHvDuTuyen", "HocVienDangKys")" style="margin-right:4px;"><i data-feather="rotate-ccw" style="vertical-align:middle!important"></i></a>
+                                <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_extend" style="margin-right:4px; display:none"><i data-feather="chevron-down" style="vertical-align:middle!important"></i></a>
+                                <a class="btn btn-outline-primary bd-rd text-nowrap" id="bt_collapse" style="margin-right: 4px; display: none"><i data-feather="chevron-up" style="vertical-align:middle!important"></i></a>
+                                <a class="btn btn-outline-primary bd-rd  text-nowrap" id="bt_export_excel" style="padding-right:6px; padding-left:6px"><i data-feather="download" style="vertical-align:middle!important"></i> Excel</a>
                                 <script>
                                     $(document).ready(function () {
                                         $('#bt_export_excel').click(function () {
-                                            var _filteriDotxt = $('#filteriDotxt').val();
-                                            var _searchString = $('#searchString').val();
-                                            var data = {
-                                                FilteriDotxt: _filteriDotxt,
-                                                SearchString: _searchString,
-                                            }
-                                            console.log(data)
-                                            $.ajax({
-                                                url: "/ExportHvDKDuTuyen/ExportHvDKDuTuyen/",
-                                                data: JSON.stringify(data),
-                                                type: "GET",
-                                                contentType: 'application/json;charset=utf-8',
-                                                dataType: 'json',
-                                                async: false,
-                                                success: function (response) {
-                                                    console.log(response)
-
-                                                },
-                                                error: function (errormessage) {
-                                                    console.log(errormessage.responseText);
-                                                }
-                                            });
+                                            let queryString_export = window.location.search;
+                                            window.location.href = "/Admin/ExportDatas/ExportHocVienDuTuyen" + queryString_export;
                                         });
                                     });
                                 </script>
@@ -142,8 +126,7 @@
                                             @Html.ActionLink("Họ, tên đệm", "DsHvDuTuyen", "HocVienDangKys",
                                                     new
                                                     {
-
-                                                        filteriNganh = ViewBag.NganhFilteri,
+                                                        filteriNganhHoc = ViewBag.NganhFilteri,
                                                         filteriLePhi = ViewBag.LePhiFilteri,
                                                         filteriHoSo = ViewBag.HoSoFilteri,
                                                         searchString = ViewBag.SearchString,
@@ -156,7 +139,7 @@
                                             @Html.ActionLink("Tên", "DsHvDuTuyen", "HocVienDangKys",
                                                    new
                                                    {
-                                                       filteriNganh = ViewBag.NganhFilteri,
+                                                       filteriNganhHoc = ViewBag.NganhFilteri,
                                                        filteriLePhi = ViewBag.LePhiFilteri,
                                                        filteriHoSo = ViewBag.HoSoFilteri,
                                                        searchString = ViewBag.SearchString,
@@ -172,7 +155,7 @@
                                             @Html.ActionLink("Mã, Ngành học", "DsHvDuTuyen", "HocVienDangKys",
                                                  new
                                                  {
-                                                     filteriNganh = ViewBag.NganhFilteri,
+                                                     filteriNganhHoc = ViewBag.NganhFilteri,
                                                      filteriLePhi = ViewBag.LePhiFilteri,
                                                      filteriHoSo = ViewBag.HoSoFilteri,
                                                      searchString = ViewBag.SearchString,
@@ -192,10 +175,10 @@
                                             @Html.DisplayName("Ngày đăng ký")
                                         </th>
                                         <th>
-                                            @Html.ActionLink("Số tham chiếu", "DsHvDuTuyen", "HocVienDangKys",
+                                            @Html.ActionLink("Theo dõi nộp phí", "DsHvDuTuyen", "HocVienDangKys",
                                                  new
                                                  {
-                                                     filteriNganh = ViewBag.NganhFilteri,
+                                                     filteriNganhHoc = ViewBag.NganhFilteri,
                                                      filteriLePhi = ViewBag.LePhiFilteri,
                                                      filteriHoSo = ViewBag.HoSoFilteri,
                                                      searchString = ViewBag.SearchString,
@@ -206,11 +189,10 @@
 
                                         </th>
                                         <th>
-                                            @Html.ActionLink("Hồ sơ hv", "DsHvDuTuyen", "HocVienDangKys",
+                                            @Html.ActionLink("Theo dõi hồ sơ HV", "DsHvDuTuyen", "HocVienDangKys",
                                                  new
                                                  {
-
-                                                     filteriNganh = ViewBag.NganhFilteri,
+                                                     filteriNganhHoc = ViewBag.NganhFilteri,
                                                      filteriLePhi = ViewBag.LePhiFilteri,
                                                      filteriHoSo = ViewBag.HoSoFilteri,
                                                      searchString = ViewBag.SearchString,
@@ -303,8 +285,7 @@
                                             <td style="text-align:center; vertical-align:middle" class="text-nowrap">
                                                 <a href="@Url.Action("DsHvDuTuyenKiemTraHoSo", "HocVienDangKys", new
                                                  {
-
-                                                      filteriNganh = ViewBag.NganhFilteri,
+                                                      filteriNganhHoc = ViewBag.NganhFilteri,
                                                       filteriLePhi = ViewBag.LePhiFilteri,
                                                       filteriHoSo = ViewBag.HoSoFilteri,
                                                       searchString = ViewBag.SearchString,
@@ -381,7 +362,7 @@
                             Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / Tổng @Model.PageCount trang/ (Tổng @ViewBag.totalRecod bản ghi)
                             @Html.PagedListPager(Model, page => Url.Action("DsHvDuTuyen", new
                                {
-                                   filteriNganh = ViewBag.NganhFilteri,
+                                   filteriNganhHoc = ViewBag.NganhFilteri,
                                    filteriLePhi = ViewBag.LePhiFilteri,
                                    filteriHoSo = ViewBag.HoSoFilteri,
                                    searchString = ViewBag.SearchString,
