--- a/Areas/Admin/Views/DotXetTuyens/CollegerCreate.cshtml
+++ b/Areas/Admin/Views/DotXetTuyens/CollegerCreate.cshtml
@@ -55,8 +55,8 @@
                             <div class="form-group col-md-2 mt-3">
                                 @Html.Label("Trạng thái", htmlAttributes: new { @class = "control-label col-md-12" })
                                 <div class="col-md-12">
-                                    @Html.EditorFor(model => model.Dxt_TrangThai, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Dxt_TrangThai, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.Dxt_TrangThai_Xt, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Dxt_TrangThai_Xt, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
